Reduced logic.